<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="textOn" translatable="false" tools:ignore="MissingTranslation">ON</string>
    <string name="textOff" translatable="false" tools:ignore="MissingTranslation">OFF</string>
    <string name="app_name" translatable="false" tools:ignore="MissingTranslation">BlockLauncher</string>
    <string name="pref_ctrl_touchscreen">Use Touchscreen</string>
    <string name="pref_ctrl_touchscreen_summary">If you are not using an Xperia Play, check this</string>
    <string name="pref_mp_username">Multiplayer Username</string>
    <string name="pref_mp_username_summary">Your name, duh</string>
    <string name="pref_texture_pack">Texture Pack</string>
    <string name="pref_texture_pack_summary">Change your texture pack</string>
    <string name="pref_zz_longvibration">Extra-long vibration</string>
    <string name="pref_zz_longvibration_summary">Increase the vibration length by 5x</string>
    <string name="pref_zz_safe_mode">Safe mode</string>
    <string name="pref_zz_safe_mode_summary">Disables all modifications</string>
    <string name="pref_zz_texture_pack_enable">Use texture pack</string>
    <string name="pref_zz_custom_dpi">Custom DPI</string>
    <string name="pref_zz_custom_dpi_summary">Change the reported screen density to change size of controls - leave blank to disable</string>
    <string name="pref_zz_texture_pack_demo">Demonstrate texture pack support</string>
    <string name="pref_zz_texture_pack_demo_summary">Use the built-in version of the Slickcraft texture pack by NathanX</string>
    <string name="pref_mp_server_visible_default">Server visible by default</string>
    <string name="pref_mp_title">Multiplayer</string>
    <string name="pref_ctrl_title">Controls</string>
    <string name="pref_gfx_title">Graphics</string>
    <string name="pref_addons_title">Addons and patches</string>
    <string name="pref_textures_title">Textures</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_zz_load_native_addons">Enable experimental addon support</string>
    <string name="pref_zz_enable_hovercar">Enable in-game patch manager</string>
    <string name="texture_pack_unable_to_load">Unable to load texture pack.</string>
    <string name="pref_zz_extract_original_textures">Extract original textures with root access</string>
    <string name="pref_zz_extract_original_textures_summary">Backup original APK with root access and set it as the texture pack</string>
    <string name="extracting_textures">Backing up original APK</string>
    <string name="extract_textures_success">Successfully set original APK as texture pack.</string>
    <string name="extract_textures_error">Unable to access original APK.</string>
    <string name="extract_textures_no_root">Unable to gain superuser access - are you rooted?</string>
    <string name="extract_textures_need_update">It seems you are using textures from an older version of Minecraft PE. Please run \"Extract original textures with root access\" in the options screen again to update textures.</string>
    <string name="pref_zz_skin_enable">Enable skin override</string>
    <string name="pref_zz_skin">Change skin</string>
    <string name="pref_zz_skin_summary">Select .png file to change skin to (will only be visible to you)</string>
    <string name="pref_zz_hovercar_hide">Hide patch manager button</string>
    <string name="pref_zz_redirect_mco">Redirect Realms to third-party server list</string>
    <string name="pref_zz_manage_scripts">Manage ModPE Scripts</string>
    <string name="pref_zz_script_enable">Enable ModPE Scripts support</string>
    <string name="pref_zz_sensorcontrol">Sensor controls</string>
    <string name="pref_zz_sensorcontrol_summary">Control the player by rotating your device. Requires ModPE Scripts to be turned on.</string>
    <string name="pref_zz_show_insert_text">Show \"Insert text\" option in in-game patch manager</string>
    <string name="pref_zz_language_override">Language</string>
    <string name="pref_zz_language_override_default">Default</string>
    <string name="pref_zz_script_paranoid_mode">Paranoid mode</string>
    <string name="pref_zz_script_paranoid_mode_summary">Disable ModPE scripts\' access to Android functions,\nlike deleting files and using internet</string>
    <string name="pref_zz_legacy_keyboard_input">Use old keyboard input code</string>
    <string name="pref_zz_legacy_keyboard_input_summary">A fix to keyboard bugs in the new 0.8.x update</string>
    <string name="pref_zz_texture_pack_enable_extracted">Use extracted original textures</string>
    <string name="pref_zz_skin_download_source">PC skins</string>
    <string name="skin_download_do_not_download">Do not download skins</string>
    <string name="skin_download_download_pc">Download skins based on PC username</string>
    <string name="nerdy_stuff_page">Nerdy stuff</string>
    <string name="dump_libminecraftpe">Dump libminecraftpe.so from memory</string>
    <string name="nerdy_stuff_are_useless">Pretty much everything on this page is useless. They are here for troubleshooting bugs.</string>
    <string name="restart_app">Restart app</string>
    <string name="manage_patches">Manage patches</string>
    <string name="world_create_title">Create world</string>
    <string name="world_name_prompt">Name: </string>
    <string name="world_seed_prompt">Seed: </string>
    <string name="world_gamemode_prompt">Game Mode: </string>
    <string name="gamemode_survival">Survival</string>
    <string name="gamemode_creative">Creative</string>
    <string name="copy_world_title">Save world</string>
    <string name="manage_patches_import">Import</string>
    <string name="manage_patches_import_error">Failed to import patch</string>
    <string name="manage_patches_too_many">Upgrade to BlockLauncher Pro to patch more than 3 patches</string>
    <string name="manage_patches_delete">Delete</string>
    <string name="manage_patches_crash_safe_mode">BlockLauncher has detected a recent crash. Safe Mode has been enabled to prevent further crashes by misbehaving patches. In this mode, all patches are disabled.
Do you want to continue in Safe Mode without patches or return to normal patching mode?</string>
    <string name="manage_patches_import_confirm">Do you want to import this patch?</string>
    <string name="manage_patches_import_done">Patch imported</string>
    <string name="manage_patches_enable">Enable</string>
    <string name="manage_patches_disable">Disable</string>
    <string name="manage_patches_disabled">(disabled)</string>
    <string name="manage_patches_invalid_patches">These patches cannot be patched because they are not in a format that BlockLauncher recognizes:</string>
    <string name="manage_patches_info">Information</string>
    <string name="manage_patches_metadata">Author</string>
    <string name="manage_patches_no_metadata">No author information available</string>
    <string name="manage_patches_path">Path</string>
    <string name="skin_import_confirm">Do you want to set this skin?</string>
    <string name="texturepack_import_confirm">Do you want to set this texturepack?</string>
    <string name="script_import_confirm">Do you want to import this ModPE Script?</string>
    <string name="skin_imported">Skin set</string>
    <string name="texturepack_imported">Texturepack set</string>
    <string name="script_imported">ModPE Script imported</string>
    <string name="manage_addons">Manage addons</string>
    <string name="get_pro">Upgrade to Pro</string>
    <string name="about_about">About BlockLauncher</string>
    <string name="about_copyright">Copyright &#169; 2013&#8211;2014 Zhuowei Zhang</string>
    <string name="about_copyright_pro">Copyright &#169; 2013&#8211;2014 Zhuowei Zhang. Do not distribute without permission.</string>
    <string name="about_librarycredits">This program uses the aFileChooser library by Paul Burke. \n
This program contains code from Snowbound\'s PTPatchTool, licensed under the Eclipse Public License. \n
This program contains a modified version of NathanX\'s Slickcraft texture pack: used with permission.\n
Parts of the built-in texture pack is based on RepetiCraft by Theevilpplz and used with permission.\n
This program contains a version of the Cydia Substrate framework by Saurik, licensed under the GNU Lesser General Public License.\n
This program uses the libsuperuser library by Chainfire.\n
This program contains a copy of the Rhino JavaScript engine from the Mozilla project.\n
For full licensing information, check the Minecraft Forums thread.\n</string>
    <string name="about_pro_library_credits"></string>
    <string name="about_thankscommunity">This application was made possible by the work of many talented translators, testers, and programmers. Thank you.\nView the Minecraft Forums thread for a list of contributors.</string>
    <string name="about_go_to_forums">Open Minecraft Forums thread for BlockLauncher</string>
    <string name="no_minecraft_installed">BlockLauncher cannot find a copy of Minecraft PE on your device. This app is designed to patch the full version of Minecraft Pocket Edition by Mojang.</string>
    <string name="firstlaunch_title">Welcome to BlockLauncher!</string>
    <string name="firstlaunch_generic_intro">Thank you for trying BlockLauncher. BlockLauncher starts your copy of Minecraft Pocket Edition and adds additional features to it through patches, addons, skins, and textures.</string>
    <string name="firstlaunch_jelly_bean">Your device runs Android Jelly Bean or newer, so BlockLauncher cannot access the default textures. The demo texture pack has been enabled so you can test the launcher.</string>
    <string name="firstlaunch_see_options">To get started with BlockLauncher, tap the wrench icon at the top of the screen. For more help, visit the Minecraft Forum thread.</string>
    <string name="firstlaunch_help">Help</string>
    <string name="version_mismatch_message">This version of Minecraft PE is not supported by BlockLauncher. BlockLauncher will run in safe mode temporarily. Please check for updates to BlockLauncher as support may be added in a newer version.</string>
    <string name="feature_not_supported">This feature is not supported in BlockLauncher yet.</string>
    <string name="hovercar_title">In-game patch manager</string>
    <string name="hovercar_live_patch">Patch mods in-game</string>
    <string name="hovercar_options">Launcher options (restart required)</string>
    <string name="hovercar_insert_text">Insert text (keyboard issue workaround)</string>
    <string name="safe_mode_exit">Return to normal</string>
    <string name="safe_mode_continue">Continue</string>
    <string name="script_import_from">Import script from</string>
    <string name="script_import_from_local">Local storage</string>
    <string name="script_import_from_cfgy">Treebl\'s official repo</string>
    <string name="script_import_from_bl_repo">BlockLauncher testing repo</string>
    <string name="script_import_from_url">Web address</string>
    <string name="script_import_from_clipboard">Clipboard</string>
    <string name="script_import_from_clipboard_name">Enter name for script</string>
    <string name="script_import_from_clipboard_code">Code to import</string>
    <string name="script_import_from_cfgy_id">Enter the ID of the script to import</string>
    <string name="script_import_from_url_enter">Enter the address of the script to import</string>
    <string name="about_kamcord_credits">Certain video and audio capture functionality is Powered by Kamcord™ (kamcord.com), and your use of such functionality is subject to the Kamcord Terms of Use (kamcord.com/tos) and Privacy Policy (kamcord.com/privacy)</string>
    <string name="texture_entry_up">Up</string>
    <string name="texture_entry_down">Down</string>
    <string name="texture_entry_remove">Remove</string>
</resources>