<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/about_appnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="15pt"/>

    <TextView android:id="@+id/rofl_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textSize="15pt"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/about_appversiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11pt"/>

    <TextView android:text="@string/about_thankscommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button android:id="@+id/about_go_to_forums_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_go_to_forums"/>

    <TextView
        android:id="@+id/about_librarycreditstext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_librarycredits"/>

    <TextView
        android:id="@+id/about_kamcordcreditstext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_kamcord_credits"/>

    <TextView
        android:id="@+id/about_copyrighttext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_copyright"/>

</LinearLayout>
</ScrollView>
