<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <TextView android:text="@string/nerdy_stuff_are_useless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16pt"/>
        <Button
            android:id="@+id/dump_libminecraftpe_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/dump_libminecraftpe" />

        <Button
            android:id="@+id/restart_app_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/restart_app" />

        <Button android:id="@+id/set_skin_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Set skin to /sdcard/skin.png"/>

        <Button android:id="@+id/chef_special"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Authorized personnel only"
            android:visibility="gone"/>

 </LinearLayout>
